--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "octokit": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.47.0",
     "react-pdf": "^7.4.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
